--- a/templates/layout.html
+++ b/templates/layout.html
@@ -78,7 +78,7 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="perfil">Ajustes de cuenta</a>
+            <a class="nav-link" href="perfil">Ajustes</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="logout">Cerrar Sesión</a>
