--- a/templates/layout.html
+++ b/templates/layout.html
@@ -64,7 +64,7 @@
       </div>
       <div class="mx-auto order-0">
         <a class="navbar-brand mx-auto" href="main"
-          >Sistema de gestión de control de aguas</a
+          >{{ session["deviceName"] }}</a
         >
         <button
           class="navbar-toggler"
