--- a/templates/layout.html
+++ b/templates/layout.html
@@ -63,9 +63,7 @@
         </ul>
       </div>
       <div class="mx-auto order-0">
-        <a class="navbar-brand mx-auto" href="main"
-          >{{ session["deviceName"] }}</a
-        >
+        <a class="navbar-brand mx-auto" href="main">{{ session["nameD"] }}</a>
         <button
           class="navbar-toggler"
           type="button"
