--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -112,7 +112,7 @@
                               <div class="form-group row">
                                   <label for="nameD" class="col-4 col-form-label">Nombre del Dispositivo</label> 
                                   <div class="col-8">
-                                    <input id="nameD" name="nameD" value ="{{ session["deviceName"] }}" class="form-control here" required="required" type="text" placeholder="Introduzca nombre del equipo">
+                                    <input id="nameD" name="nameD" value ="{{ session["nameD"] }}" class="form-control here" required="required" type="text" placeholder="Introduzca nombre del equipo">
                                   </div>
                                 </div>
                                 <div class="form-group row">
