--- a/templates/edit-contact.html
+++ b/templates/edit-contact.html
@@ -1,4 +1,4 @@
-{% extends "layout1.html" %} {% block conten %}
+{% extends "layout.html" %} {% block body %}
 
 <div class="row">
   <div class="col-md-4 offset-md-4">
