--- a/templates/estadisticas.html
+++ b/templates/estadisticas.html
@@ -103,7 +103,7 @@
 
                     <div name="distancia" class="col mt-3">
                         <label for="dis">
-                            <h6 class="font-weight-bold">Distancia </h6>
+                            <h6 class="font-weight-bold">Nivel del Agua </h6>
                         </label>
                         
   
