--- a/templates/main.html
+++ b/templates/main.html
@@ -28,7 +28,7 @@
           Temperatura exterior: <span class=" ml-3" id="tem"></span>
         </li>
         <li class="list-group-item bg-light text-dark">
-          Distancia: <span class=" ml-3" id="dis"></span>
+          Nivel del Agua: <span class=" ml-3" id="dis"></span>
         </li>
         <li class="list-group-item bg-white text-muted">
           Último movimiento detectado: <span class=" ml-3" id="av"></span>
