--- a/templates/layout.html
+++ b/templates/layout.html
@@ -52,18 +52,22 @@
       >
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="main">Inicio</a>
+            <a class="nav-link" href="{{ url_for('main') }}">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="calendar">Calendario</a>
+            <a class="nav-link" href="{{ url_for('calendar') }}">Calendario</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="estadisticas">Estadísticas</a>
+            <a class="nav-link" href="{{ url_for('estadisticas') }}"
+              >Estadísticas</a
+            >
           </li>
         </ul>
       </div>
       <div class="mx-auto order-0">
-        <a class="navbar-brand mx-auto" href="main">{{ session["nameD"] }}</a>
+        <a class="navbar-brand mx-auto" href="{{ url_for('main') }}">{{
+          session["nameD"]
+        }}</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -76,10 +80,10 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="perfil">Ajustes</a>
+            <a class="nav-link" href="{{ url_for('perfil') }}">Ajustes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="logout">Cerrar Sesión</a>
+            <a class="nav-link" href="{{ url_for('logout') }}">Cerrar Sesión</a>
           </li>
         </ul>
       </div>
