--- a/templates/reboot.html
+++ b/templates/reboot.html
@@ -23,11 +23,21 @@
 
       <div class="modal-body">
         <h6>
-          El dispositivo se reiniciará y se quedará inoperativo durante unos
-          pocos minutos.<br /><br />
+          El dispositivo se reiniciará y se quedará inoperativo durante unos 30
+          segundos <br /><br />
           Una vez reiniciado, el dispositivo cargará la última configuración que
-          haya sido guardada.<br /><br />
+          haya sido guardada y tendrá que iniciar sesión nuevamente.<br /><br />
         </h6>
+      </div>
+      <div class="progress">
+        <div
+          class="progress-bar bg-success progress-bar-striped progress-bar-animated"
+          role="progressbar"
+          aria-valuemin="0"
+          aria-valuemax="100"
+          style="width:1%"
+          id="myBar"
+        ></div>
       </div>
 
       <div class="modal-footer">
