--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -259,7 +259,7 @@ function reinicio() {
         console.log("fail reinicio");
         var t = setTimeout(reinicio, 100);
       });
-    document.getElementById("Cerrar").click();
+    //document.getElementById("Cerrar").click();
   }
 
 function myFunction() {
