--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -248,10 +248,10 @@ barra.style.display = "none";
     boton.addEventListener("click", reinicio);
 
 function reinicio() {
-   
+
     $.get("/reinicio", function() {})
       .done(function(out) {
-        move()
+        
         console.log(out);
       })
       .fail(function() {
@@ -259,6 +259,7 @@ function reinicio() {
         console.log("fail reinicio");
         var t = setTimeout(reinicio, 100);
       });
+      move();
     //document.getElementById("Cerrar").click();
   }
 
