--- a/templates/reboot.html
+++ b/templates/reboot.html
@@ -44,7 +44,7 @@
         <button
           type="button"
           class="btn btn-secondary"
-          id="Cerrar"
+          id="cerrar"
           data-dismiss="modal"
         >
           Cancelar
