--- a/templates/reboot.html
+++ b/templates/reboot.html
@@ -23,7 +23,7 @@
 
       <div class="modal-body">
         <h6>
-          El dispositivo se reiniciará y se quedará inoperativo durante unos 30
+          El dispositivo se reiniciará y se quedará inoperativo durante unos
           segundos <br /><br />
           Una vez reiniciado, el dispositivo cargará la última configuración que
           haya sido guardada y tendrá que iniciar sesión nuevamente.<br /><br />
