--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -202,6 +202,9 @@
                                   <button type="button" class="btn-danger" data-toggle="modal" id="reboot" data-target="#rebootModal" >
                                     Reiniciar del Sistema
                                   </button>
+                                  <button type="button" class="btn-danger" data-toggle="modal" id="update" data-target="#updateModal" >
+                                      Actualizar del Sistema
+                                    </button>
                                 </div>
                               </div>
                               <strong> Todos los campos son obligatorios </strong>
