--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -202,7 +202,7 @@
                                   <button type="button" class="btn-danger" data-toggle="modal" id="reboot" data-target="#rebootModal" >
                                     Reiniciar del Sistema
                                   </button>
-                                  <button type="button" class="btn-danger" data-toggle="modal" id="update" data-target="#updateModal" >
+                                  <button type="button" class="btn-warning" data-toggle="modal" id="update" data-target="#updateModal" >
                                       Actualizar del Sistema
                                     </button>
                                 </div>
