--- a/templates/reboot.html
+++ b/templates/reboot.html
@@ -113,7 +113,7 @@
           Cancelar
         </button>
         <button type="button" id="updateBTN" class="btn btn-warning">
-          Reiniciar
+          Actualizar
         </button>
       </div>
     </div>
